--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = logrotate
-url = https://github.com/logrotate/logrotate/releases/download/3.14.0/logrotate-3.14.0.tar.xz
+url = https://github.com/logrotate/logrotate/releases/download/3.15.0/logrotate-3.15.0.tar.xz
 archives = 
 giturl = https://github.com/logrotate/logrotate.git
 
@@ -21,6 +21,8 @@ broken_parallel_build = false
 compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
