--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = logrotate
-url = https://github.com/logrotate/logrotate/releases/download/3.16.0/logrotate-3.16.0.tar.xz
+url = https://github.com/logrotate/logrotate/releases/download/3.17.0/logrotate-3.17.0.tar.xz
 archives = 
 giturl = https://github.com/logrotate/logrotate.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
