--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = logrotate
-url = https://github.com/logrotate/logrotate/releases/download/3.20.1/logrotate-3.20.1.tar.xz
+url = https://github.com/logrotate/logrotate/releases/download/3.21.0/logrotate-3.21.0.tar.xz
 archives = 
 giturl = https://github.com/logrotate/logrotate.git
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
